feat: 重构认证体系 - 支持 ApiKey + Session 双重校验
- 新增 sql-forge-model 模块，抽取 records/Constant 等模型类
- 认证相关文件(AuthFilter/SessionManager/User/UserRole等)从 web-autoconfigure 下沉到 core
- 新增 AuthAutoConfiguration，注册认证相关 Bean
- SqlForgeProperties 新增 apiKeys 属性，支持 ApiKey 校验
- AuthFilter 支持 X-Api-Key header + Session 双重认证方式
- SqlForgeConfiguration 所有 API 路由统一添加 AuthFilter
- 精简 User/UserRole/Role/RoleTemplate，移除 JPA 注解和多余字段
- Jdbc 存储实现全部改用 ExecutorService + SqlScript 替代 EntityExecutor
- Flyway 迁移脚本同步精简 users 表结构
- .gitignore 添加 target/ 排除规则

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>